fixed overflow

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -21,7 +21,8 @@ body{
 }
 
 html{
-	width: 100%;
+	width: 100vw;
+	max-width: 100vw;
 	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -67,7 +68,8 @@ html{
 	width: 100%;
 	height: auto;
 	min-height: 100vh;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .main-body{
